@@ -1,3 +1,8 @@
+2021-03-06  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* unicode_bidi.c (unicode_bidi_needs_embed): Make its return code
+	what its documentation says its return code is.
+
 2021-02-24  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* Implement unicode_bidi_needs_embed(), unicode_bidi_cleaned_size(),
